--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h1>Module topic</h1>
-<app-m1-item1></app-m1-item1>
-<app-m1-item2></app-m1-item2>
+<h1>Component topic</h1>
+<app-m1-item1 [Items]="Items" (onItem)="onDelItem($event)"></app-m1-item1>
+<app-m1-item2 (onItem)="onAddItem($event)"></app-m1-item2>
 
 <app-m2-item1></app-m2-item1>
 <app-m2-item2></app-m2-item2>
