--- a/src/app/modules/module1/components/m1-item2/m1-item2.component.html
+++ b/src/app/modules/module1/components/m1-item2/m1-item2.component.html
@@ -1,2 +1,2 @@
-<input type="text" #input>
+<input type="text" (appDirect2)="onAddItem(input)" #input>
 <button type="submit" (click)="onAddItem(input)">save</button>
