--- a/src/app/modules/module2/components/m2-item1/m2-item1.component.html
+++ b/src/app/modules/module2/components/m2-item1/m2-item1.component.html
@@ -1,1 +1,5 @@
-<p>m2-item1 works!</p>
+<ul>
+    <li *ngFor="let item of Items" appDirect1="appDirect1 hover here">
+        {{ item }}
+    </li>
+</ul>
