--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Directive topic</h1>
+<h1>Pipe topic</h1>
 <app-m1-item1 [Items]="Items" (onItem)="onDelItem($event)"></app-m1-item1>
 <app-m1-item2 (onItem)="onAddItem($event)"></app-m1-item2>
 
