--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 <app-m1-item2 (onItem)="onAddItem($event)"></app-m1-item2>
 
 <app-m2-item1 [Items]="Items"></app-m2-item1>
-<app-m2-item2></app-m2-item2>
+<app-m2-item2 (onSubmit)="onAddItem($event)"></app-m2-item2>
