--- a/src/app/modules/module1/components/m1-item1/m1-item1.component.html
+++ b/src/app/modules/module1/components/m1-item1/m1-item1.component.html
@@ -2,7 +2,7 @@
     <li *ngFor="let item of Items; let i = index">
         <div>
             <div [title]="item">{{ item }}</div>
-            <button (click)="onDelItem(i)">X</button>
+            <button (click)="_appService.delItem(i)">X</button>
         </div>
     </li>
 </ul>
