--- a/src/app/modules/module2/components/m2-item1/m2-item1.component.html
+++ b/src/app/modules/module2/components/m2-item1/m2-item1.component.html
@@ -1,5 +1,5 @@
 <ul>
-    <li *ngFor="let item of _appService.Items" appDirect1="appDirect1 hover here">
+    <li *ngFor="let item of Items" appDirect1="appDirect1 hover here">
         {{ item | pipe1 : 10 : '[...]' }}
     </li>
 </ul>
