--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,23 @@
-<h1>Service topic</h1>
-<app-m1-item1></app-m1-item1>
-<app-m1-item2></app-m1-item2>
+<h1>Rxjs topic</h1>
+<table>
+    <tr>
+        <td>
+            <h3>Observable</h3>
+            <app-m1-item1></app-m1-item1>
+            <app-m1-item2></app-m1-item2>
 
-<app-m2-item1></app-m2-item1>
-<app-m2-item2></app-m2-item2>
+            <app-m2-item1></app-m2-item1>
+            <app-m2-item2></app-m2-item2>
+        </td>
+
+        <td style="width: 300px">
+            <h3>Subject</h3>
+            <app-subject-item></app-subject-item>
+        </td>
+
+        <td style="width: 300px">
+            <h3>Behaviour Subject</h3>
+            <app-behaviour-subject-item></app-behaviour-subject-item>
+        </td>
+    </tr>
+</table>
