Http Client service

--- a/src/app/modules/module1/components/m1-item1/m1-item1.component.html
+++ b/src/app/modules/module1/components/m1-item1/m1-item1.component.html
@@ -1,5 +1,5 @@
 <ul>
-    <li *ngFor="let item of Items; let i = index">
+    <li *ngFor="let item of _appService.Items; let i = index">
         <div>
             <div [title]="item">{{ item }}</div>
             <button (click)="onDelItem(i)">X</button>
